2008-01-21 version 1.2-5

  - bugfix for numbered ANALYZE files in read.ANALYZE() which lead to reading only one file.
  - set level for mask in all read functions as argument. reset data to zero only 
    for NA values not for !mask
  - bugfix for SQ in read.DICOM which caused incorrect reading of data sequences
    of unknown length
  - dimension setting bugfix in read.ANALYZE()
  - several corrections for ngca, 
  - function ngca now works for matrix- and fmridata-objects
  - new fastICA function for fmri (fmriica)
  - fmriica allows to restrict data cube by arguments xind, yind, zind and tind

2007-12-07 version 1.2-4

  - if dataset contains NA, set mask at these voxels to FALSE, set data to zero.
  - to determine the (head) mask the quantile function in all read functions 
    has na.rm = TRUE now. This avoids error for datasets with NaN in datacube.

2007-11-12 version 1.2-3

  - read.AFNI() has a new argument 'vol' which contains a vector of 
    volumes to be read. This hopefully enables to read parts of large datastes 
    without running into memory problems.
  - if in fmri.pvalue() the df is larger than 171, a Gaussian Random Field instead of t-field is used.
    gamma() is not defined otherwise. On the other df is large enough!
  - bugfix in read.NIFTI which contained a misinterpretation of the header entries 
    (bitpix, dim)
  - new function write.NIFTI()

2007-09-05 version 1.2-2

  - write.AFNI() completely re-written, it has new arguments header (AFNI-header 
    list with entries such as DATASET_RANK etc.) and logical taxis, which controls,
    whether sub-bricks contain time series data. All other (old) arguments are 
    depreciated, but the function should behave as in former version when called 
    as such. This will be removed in some future version!
  - read.AFNI() now does not include ' and ~ in string-attributes in header

2007-07-02 version 1.2-1

  - bugfix in fmri.lm() which was unable to calculate spatial correlation for