@@ -5,3 +5,4 @@ export(fmri.smooth,fmri.pvalue)
 export(plot.fmridata,summary.fmridata,print.fmridata,ngca,fmriica)
 useDynLib(fmri)
 #export(vaws3D,smooth3D)
+import(fastICA,tkrplot)
